# CodeDiary

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.py  code_review.md  constants.py  copy.py  launch_chrome_with_login_state.py  main.py  playwright_google_form_automation.py  prompt_template.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
app/: __init__.py  main_window.py
docs/: CHANGELOG.md  README.md
external_service/: api_factory.py  base_api.py  claude_api.py  gemini_api.py  openai_api.py
scripts/: APIsetting_check.py  project_structure.txt  version_manager.py
service/: git_commit_history.py  github_commit_tracker.py  google_form_automation.py  google_form_automation_gui.py  launch_form_page.py  programming_diary_generator.py
tests/: conftest.py  test_git_commit_history.py  test_github_commit_tracker.py  test_google_form_automation.py  test_launch_form_page.py  test_main_window.py  test_programming_diary_generator.py  test_repository_name_extractor.py
utils/: config.ini  config_manager.py  constants.py  env_loader.py  exceptions.py  prompt_template.md  repository_name_extractor.py
widgets/: __init__.py  control_buttons_widget.py  date_selection_widget.py  diary_content_widget.py  progress_widget.py
