[project]
name = "codediary"
version = "1.2.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pyinstaller>=6.14.2",
    "pyright>=1.1.409",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["app", "services", "utils", "widgets", "tests"]
exclude = ["scripts"]
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true