[project]
name = "codediary"
version = "1.2.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.60.0",
    "beautifulsoup4>=4.13.4",
    "google-generativeai>=0.8.5",
    "openai>=1.99.5",
    "python-dotenv>=1.1.1",
    "tkcalendar>=1.6.1",
]

[dependency-groups]
dev = [
    "coverage>=7.10.1",
    "pyinstaller>=6.14.2",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["app", "services", "utils", "widgets", "tests"]
exclude = ["scripts"]
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true